--- a/css/popup_registrazione.css
+++ b/css/popup_registrazione.css
@@ -3,8 +3,8 @@
 
 /* LOGIN */
 #registrazione{
-	height:460px;
-	margin-top:-230px;
+	height:470px;
+	margin-top:-235px;
 	background-color: var(--menu-fondino);
 }
 .smart #registrazione{
@@ -66,6 +66,9 @@
 	margin-top:10px;
     box-shadow: 0px 0px 3px rgb(0 0 0 / 50%);
 	-webkit-appearance: none;
+}
+.mezza{
+	width:calc(50% - 2px) !important;
 }
 .smart.android #registrazioneForm input[type='submit']{
 	font-size: var(--font-16-93);
