Gestione moduli su licenze

--- a/css/confirm_alert.css
+++ b/css/confirm_alert.css
@@ -53,7 +53,8 @@
     border: 1px solid #9fbde6;
 }
 #CNF_lg,
-#CNF_pr{
+#CNF_pr,
+#CNF_lc{
 	background-size: auto 24px;
 	background-position:4px center;
 	background-repeat:no-repeat;
@@ -69,10 +70,22 @@
 #CNF_lg{
 	background-image: url(../img/ico_utente.png);
 }
+#CNF_lc{
+	background-size: auto !important;
+	border:none;
+	background-image: url(../img/ico_modulesB.png);
+	background-position:6px center !important;
+	background-color: #cfcfcf;
+	height:30px;
+	margin-left:5px !important;
+}
 #CNF_si:hover,
 #CNF_ok:hover,
 #CNF_lg:hover{
 	background-color: #1857af;
+}
+#CNF_lc:hover{
+	background-color: #c0c0c0;
 }
 #CNF_pr:hover{
 	background-color: #333;
@@ -81,8 +94,12 @@
 .alert #CNF_no,
 .alert #CNF_lg,
 .alert #CNF_pr,
+.alert #CNF_lc,
 .alert #CNF_an{
 	display:none;
+}
+.alert.CNF_licenses #CNF_lc{
+	display:inline-block !important;
 }
 #CNF_no,
 .alert #CNF_an{
@@ -99,11 +116,13 @@
 }
 #CNF:not(.CNF_login) #CNF_lg,
 #CNF:not(.CNF_login) #CNF_pr,
+#CNF:not(.CNF_login) #CNF_lc,
 #CNF:not(.CNF_login) #CNF_an{
 	display:none;
 }
 .CNF_login #CNF_lg,
 .CNF_login #CNF_pr,
+.CNF_login #CNF_lc,
 .CNF_login #CNF_an{
 	display: inline-block !important;
 }
