--- a/css/forms.css
+++ b/css/forms.css
@@ -603,7 +603,7 @@ body.bodyModello .p_paz_screenshot:hover{ /* PAZIENTI */
 	box-shadow:0px 0px 2px rgba(0,0,0,0.4);
 	overflow: hidden;
 }
-.sezioneTrattamenti .tsb,
+/* .sezioneTrattamenti .tsb, */
 .sezioneTrattamenti .tag,
 .sezioneTrattamenti .medicina,
 .sezioneTrattamenti .allergia,
