--- a/css/guida.css
+++ b/css/guida.css
@@ -542,7 +542,33 @@
 	box-shadow:0px 0px 10px rgba(0,0,0,0.4);
 	padding:48px;
 }
-
+.btnsGuide{
+	height:30px;
+	margin: 20px 0 -13px 0;
+}
+.btnLicenze{
+	display: inline-block;
+    vertical-align: middle;
+	background-image: url(../img/ico_puzzleB.png);
+	background-repeat: no-repeat;
+	background-position: 5px center;
+	background-size: auto 22px;
+    padding-right: 10px;
+    height: 30px;
+    line-height: 28px;
+    background-color: #cfcfcf;
+	color:#000;
+    border-radius: 5px;
+    padding-left: 31px;
+    margin-top: -7px;
+    cursor: pointer;
+    margin-left: 8px;
+    float: left;
+    max-width: 125px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
 .noVisPiu{
 	text-align:right;
 	height:20px;
@@ -874,6 +900,12 @@ body:not(.smart) #guida_generica .fumetti_freccia:last-child{
 }
 .guida_set_mini .fumetti_cont h1{
 	display:none;
+}
+.guida_set_mini .fumetti_cont{
+	padding-top: 20px;
+}
+.guida_set_mini .btnReference{
+	display:inline-block !important;
 }
 .guida_archivi .fumetti_freccia:last-child,
 .guida_set .fumetti_freccia:last-child,
