--- a/css/popup_licenze.css
+++ b/css/popup_licenze.css
@@ -19,7 +19,12 @@
 	text-align:left;
 }
 .listLicenze{
-	margin-bottom:10px;
+    padding-bottom: 5px;
+    border-bottom: solid 1px rgba(0, 0, 0, 0.1);
+}
+.txtFeatures{
+	padding-top: 15px;
+    border-top: solid 1px rgba(255, 255, 255, 0.5);
 }
 .listLicenze > div{
 	padding:10px;
