--- a/css/popup_features.css
+++ b/css/popup_features.css
@@ -72,7 +72,7 @@
 	overflow-y:auto;
 	text-align:left;
 }
-@media (min-width: 601px){
+/* @media (min-width: 601px){
 	#contFeatures{
 		background-image: url(../sets/reflessologia_plantare/img/piedi_riflessi_anatomia.png), url(../sets/reflessologia_plantare/img/linea_sfum.png);
 		background-repeat: no-repeat, repeat-x;
@@ -87,7 +87,7 @@
 		background-size: auto, auto;
 		background-position: center calc(100% + 64px), center calc(100% + 30px);
 	}
-}
+} */
 #contFeatures h2{
 	font-size: var(--font-24-2);
 	margin:0px;
