--- a/css/popup_purchases.css
+++ b/css/popup_purchases.css
@@ -17,6 +17,7 @@
 	background-color:#FFF;
 	padding:20px;
 	height: calc(100% - 40px);
+	overflow-y: auto;
 }
 #contPurchases.ini{
 	background-image:url(../img/loadingWhite2.gif);
