--- a/sets/meridiani_shiatsu/stili.css
+++ b/sets/meridiani_shiatsu/stili.css
@@ -791,6 +791,9 @@ body.smart.touch .textMeridianoTratt{
 	border-radius:6px;
 	background-color: rgba(0,0,0,0.2);
 }
+#meridianiSmart_ico.nas{
+	display:none !important;
+}
 /*body.bodyStyled2:not(.smart) #meridianiSmart_ico{
 	background-image:url(../../img/ico_meridiani.png);
 }*/
