--- a/css/forms.css
+++ b/css/forms.css
@@ -594,11 +594,12 @@ body.bodyModello .p_paz_screenshot:hover{ /* PAZIENTI */
 .patologia,
 .intervento{
 	display:inline-block;
-	border-radius:12px;
-	height:24px;
+	border-radius:25px;
+	/* height:24px;
 	line-height:24px !important;
 	padding-left:5px;
-	padding-right:10px;
+	padding-right:10px; */
+	padding:4px 10px;
 	margin:7px;
 	box-shadow:0px 0px 2px rgba(0,0,0,0.4);
 	overflow: hidden;
