--- a/sets/meridiani_shiatsu/stili.css
+++ b/sets/meridiani_shiatsu/stili.css
@@ -512,6 +512,7 @@ body:not(.touch) .listaMeridiani .spazioDopo{
 	line-height: 37px !important;
     font-size: var(--font-16) !important;
 	background-position: 5px 14px, calc(100% - 3px) 5px !important;
+	height: 37px !important;
 }
 .app_version.bug_font.smart.android .elencoPunti p *{
 	line-height: 33.9px !important;
@@ -534,6 +535,9 @@ body:not(.smart) .elencoPunti a,
 body:not(.smart) .elencoPunti a *{
 	color: #FFF !important;
 	font-size: var(--font-12) !important;
+}
+.smart .elencoPunti a{
+	height:37px !important;
 }
 .smart .elencoPunti a,
 .smart .elencoPunti a *{
