--- a/css/forms.css
+++ b/css/forms.css
@@ -234,6 +234,8 @@ body:not(.smart) .stampaBtn{
 }
 #btn_stampa{
 	margin-top:30px !important;
+	width: auto !important;
+	padding: 0px 15px !important;
 }
 .link_del{
 	color:#F00;
